CICD/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-frontend
  labels:
    app: rag-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-frontend
  template:
    metadata:
      labels:
        app: rag-frontend
    spec:
      containers:
        - name: rag-frontend
          # Will be overridden by CI/CD
          image: REPLACE_ECR_REGISTRY/rag-frontend-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: rag-frontend
  labels:
    app: rag-frontend
spec:
  selector:
    app: rag-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
