CICD/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rag.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rag-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: rag-backend
                port:
                  number: 8000
